fix($client): Fix disabled scrolling, left align text in emails
When navigated away from an open modal, sometimes scrolling would stay disabled, because the body
retained the vue-js-modal scorlling disabler class. This is until we switch away from that module.

--- a/src/client/scss/_reboot.scss
+++ b/src/client/scss/_reboot.scss
@@ -26,3 +26,9 @@ body {
 .dropdown-toggle.clearfix {
   border-radius: 0
 }
+
+body.v--modal-block-scroll {
+  overflow: auto !important;
+  position: initial !important;
+  width: initial !important;
+}
