--- a/src/client/scss/email.scss
+++ b/src/client/scss/email.scss
@@ -99,6 +99,10 @@ html,
   line-height: 1.5rem;
 }
 
+.has-text-left {
+  text-align: left;
+}
+
 .has-text-centered {
   text-align: center;
 }
